--- a/index.html
+++ b/index.html
@@ -81,18 +81,20 @@
 
           <ul class="advantages-list">
             <li class="advantages-list-item">
-              <a class="icon-advantages" href="">
-                <svg
-                  class="icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="60"
-                  height="64"
-                >
-                  <use
-                    xlink:href="./images/symbol-defs.svg#icon-antenna-1"
-                  ></use>
-                </svg>
-              </a>
+              <div class="icon-advantages">
+                <a href="">
+                  <svg
+                    class="icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="64"
+                    height="64"
+                  >
+                    <use
+                      xlink:href="./images/symbol-defs.svg#icon-antenna-1"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="advantages-title">Strategy</h3>
 
               <p class="advantages-list-text">
@@ -101,18 +103,20 @@
               </p>
             </li>
             <li class="advantages-list-item">
-              <a class="icon-advantages" href="">
-                <svg
-                  class="icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="60"
-                  height="64"
-                >
-                  <use
-                    xlink:href="./images/symbol-defs.svg#icon-clock-1-1"
-                  ></use>
-                </svg>
-              </a>
+              <div class="icon-advantages">
+                <a href="">
+                  <svg
+                    class="icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="64"
+                    height="64"
+                  >
+                    <use
+                      xlink:href="./images/symbol-defs.svg#icon-clock-1-1"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="advantages-title">Punctuality</h3>
 
               <p class="advantages-list-text">
@@ -121,18 +125,20 @@
               </p>
             </li>
             <li class="advantages-list-item">
-              <a class="icon-advantages" href="">
-                <svg
-                  class="icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="60"
-                  height="64"
-                >
-                  <use
-                    xlink:href="./images/symbol-defs.svg#icon-diagram-1"
-                  ></use>
-                </svg>
-              </a>
+              <div class="icon-advantages">
+                <a href="">
+                  <svg
+                    class="icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="64"
+                    height="64"
+                  >
+                    <use
+                      xlink:href="./images/symbol-defs.svg#icon-diagram-1"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="advantages-title">Diligence</h3>
 
               <p class="advantages-list-text">
@@ -142,18 +148,20 @@
             </li>
 
             <li class="advantages-list-item">
-              <a class="icon-advantages" href="">
-                <svg
-                  class="icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="60"
-                  height="64"
-                >
-                  <use
-                    xlink:href="./images/symbol-defs.svg#icon-astronaut-1"
-                  ></use>
-                </svg>
-              </a>
+              <div class="icon-advantages">
+                <a href="">
+                  <svg
+                    class="icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="64"
+                    height="64"
+                  >
+                    <use
+                      xlink:href="./images/symbol-defs.svg#icon-astronaut-1"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="advantages-title">Technologies</h3>
 
               <p class="advantages-list-text">
