--- a/index.html
+++ b/index.html
@@ -104,18 +104,11 @@
             </li>
             <li class="advantages-list-item">
               <div class="icon-advantages">
-                <a href="">
-                  <svg
-                    class="icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="64"
-                    height="64"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-clock-1-1"
-                    ></use>
-                  </svg>
-                </a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64">
+                  <use
+                    xlink:href="./images/symbol-defs.svg#icon-clock-1-1"
+                  ></use>
+                </svg>
               </div>
               <h3 class="advantages-title">Punctuality</h3>
 
@@ -126,18 +119,11 @@
             </li>
             <li class="advantages-list-item">
               <div class="icon-advantages">
-                <a href="">
-                  <svg
-                    class="icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="64"
-                    height="64"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-diagram-1"
-                    ></use>
-                  </svg>
-                </a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64">
+                  <use
+                    xlink:href="./images/symbol-defs.svg#icon-diagram-1"
+                  ></use>
+                </svg>
               </div>
               <h3 class="advantages-title">Diligence</h3>
 
@@ -149,18 +135,11 @@
 
             <li class="advantages-list-item">
               <div class="icon-advantages">
-                <a href="">
-                  <svg
-                    class="icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="64"
-                    height="64"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-astronaut-1"
-                    ></use>
-                  </svg>
-                </a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64">
+                  <use
+                    xlink:href="./images/symbol-defs.svg#icon-astronaut-1"
+                  ></use>
+                </svg>
               </div>
               <h3 class="advantages-title">Technologies</h3>
 
@@ -187,54 +166,64 @@
               <div class="name-container">
                 <h3 class="our-team-title-list">Mark Guerrero</h3>
                 <p class="our-team-text">Product Designer</p>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-instagram-2"
-                    ></use>
-                  </svg>
-                </a>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-twitter-1"
-                    ></use>
-                  </svg>
-                </a>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-facebook-1"
-                    ></use>
-                  </svg>
-                </a>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
-                    ></use>
-                  </svg>
-                </a>
+                <ul class="soc-icon-link">
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -243,54 +232,64 @@
               <div class="name-container">
                 <h3 class="our-team-title-list">Tom Ford</h3>
                 <p class="our-team-text">Frontend Developer</p>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-instagram-2"
-                    ></use>
-                  </svg>
-                </a>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-twitter-1"
-                    ></use>
-                  </svg>
-                </a>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-facebook-1"
-                    ></use>
-                  </svg>
-                </a>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
-                    ></use>
-                  </svg>
-                </a>
+                <ul class="soc-icon-link">
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list-item">
@@ -303,54 +302,64 @@
               <div class="name-container">
                 <h3 class="our-team-title-list">Camila Garcia</h3>
                 <p class="our-team-text">Marketing</p>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-instagram-2"
-                    ></use>
-                  </svg>
-                </a>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-twitter-1"
-                    ></use>
-                  </svg>
-                </a>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-facebook-1"
-                    ></use>
-                  </svg>
-                </a>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
-                    ></use>
-                  </svg>
-                </a>
+                <ul class="soc-icon-link">
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list-item">
@@ -363,54 +372,64 @@
               <div class="name-container">
                 <h3 class="our-team-title-list">Daniel Wilson</h3>
                 <p class="our-team-text">UI Designer</p>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-instagram-2"
-                    ></use>
-                  </svg>
-                </a>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-twitter-1"
-                    ></use>
-                  </svg>
-                </a>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-facebook-1"
-                    ></use>
-                  </svg>
-                </a>
-                <a class="soc-icon-link" href="">
-                  <svg
-                    class="soc-icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                  >
-                    <use
-                      xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
-                    ></use>
-                  </svg>
-                </a>
+                <ul class="soc-icon-link">
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icon-list">
+                    <a class="soc-icon" href="">
+                      <svg
+                        class="soc-icon-svg"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use
+                          xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
