--- a/index.html
+++ b/index.html
@@ -83,12 +83,7 @@
             <li class="advantages-list-item">
               <div class="icon-advantages">
                 <a href="">
-                  <svg
-                    class="icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="64"
-                    height="64"
-                  >
+                  <svg class="icon" width="64" height="64">
                     <use
                       xlink:href="./images/symbol-defs.svg#icon-antenna-1"
                     ></use>
@@ -104,7 +99,7 @@
             </li>
             <li class="advantages-list-item">
               <div class="icon-advantages">
-                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64">
+                <svg width="64" height="64">
                   <use
                     xlink:href="./images/symbol-defs.svg#icon-clock-1-1"
                   ></use>
@@ -119,7 +114,7 @@
             </li>
             <li class="advantages-list-item">
               <div class="icon-advantages">
-                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64">
+                <svg width="64" height="64">
                   <use
                     xlink:href="./images/symbol-defs.svg#icon-diagram-1"
                   ></use>
@@ -135,7 +130,7 @@
 
             <li class="advantages-list-item">
               <div class="icon-advantages">
-                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64">
+                <svg width="64" height="64">
                   <use
                     xlink:href="./images/symbol-defs.svg#icon-astronaut-1"
                   ></use>
@@ -169,12 +164,7 @@
                 <ul class="soc-icon-link">
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
                           xlink:href="./images/symbol-defs.svg#icon-instagram-2"
                         ></use>
@@ -183,12 +173,7 @@
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
                           xlink:href="./images/symbol-defs.svg#icon-twitter-1"
                         ></use>
@@ -197,12 +182,7 @@
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
                           xlink:href="./images/symbol-defs.svg#icon-facebook-1"
                         ></use>
@@ -211,12 +191,7 @@
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
                           xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
                         ></use>
@@ -235,12 +210,7 @@
                 <ul class="soc-icon-link">
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
                           xlink:href="./images/symbol-defs.svg#icon-instagram-2"
                         ></use>
@@ -249,12 +219,7 @@
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
                           xlink:href="./images/symbol-defs.svg#icon-twitter-1"
                         ></use>
@@ -263,12 +228,7 @@
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
                           xlink:href="./images/symbol-defs.svg#icon-facebook-1"
                         ></use>
@@ -277,12 +237,7 @@
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
                           xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
                         ></use>
