--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
             <li class="advantages-list-item">
               <div class="icon-advantages">
                 <svg class="icon" width="64" height="64">
-                  <use
-                    xlink:href="./images/symbol-defs.svg#icon-antenna-1"
-                  ></use>
+                  <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Strategy</h3>
@@ -98,9 +96,7 @@
             <li class="advantages-list-item">
               <div class="icon-advantages">
                 <svg width="64" height="64">
-                  <use
-                    xlink:href="./images/symbol-defs.svg#icon-clock-1-1"
-                  ></use>
+                  <use href="./images/symbol-defs.svg#icon-clock-1-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Punctuality</h3>
@@ -113,9 +109,7 @@
             <li class="advantages-list-item">
               <div class="icon-advantages">
                 <svg width="64" height="64">
-                  <use
-                    xlink:href="./images/symbol-defs.svg#icon-diagram-1"
-                  ></use>
+                  <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Diligence</h3>
@@ -129,9 +123,7 @@
             <li class="advantages-list-item">
               <div class="icon-advantages">
                 <svg width="64" height="64">
-                  <use
-                    xlink:href="./images/symbol-defs.svg#icon-astronaut-1"
-                  ></use>
+                  <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Technologies</h3>
@@ -164,7 +156,7 @@
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-instagram-2"
+                          href="./images/symbol-defs.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -173,7 +165,7 @@
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-twitter-1"
+                          href="./images/symbol-defs.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
@@ -182,7 +174,7 @@
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-facebook-1"
+                          href="./images/symbol-defs.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
@@ -191,7 +183,7 @@
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -210,7 +202,7 @@
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-instagram-2"
+                          href="./images/symbol-defs.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -219,7 +211,7 @@
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-twitter-1"
+                          href="./images/symbol-defs.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
@@ -228,7 +220,7 @@
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-facebook-1"
+                          href="./images/symbol-defs.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
@@ -237,7 +229,7 @@
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -258,56 +250,36 @@
                 <ul class="soc-icon-link">
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-instagram-2"
+                          href="./images/symbol-defs.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-twitter-1"
+                          href="./images/symbol-defs.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-facebook-1"
+                          href="./images/symbol-defs.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -328,56 +300,36 @@
                 <ul class="soc-icon-link">
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-instagram-2"
+                          href="./images/symbol-defs.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-twitter-1"
+                          href="./images/symbol-defs.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-facebook-1"
+                          href="./images/symbol-defs.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
-                      <svg
-                        class="soc-icon-svg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                      >
+                      <svg class="soc-icon-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/symbol-defs.svg#icon-linkedin-1"
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -394,72 +346,114 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                src="./images/Banking.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="img-container">
+                <img
+                  src="./images/Banking.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="text-up">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-list-title">Banking App</h3>
                 <p class="portfolio-list-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/Cashless.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="img-container">
+                <img
+                  src="./images/Cashless.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="text-up">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-list-title">Cashless Payment</h3>
                 <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/Meditation.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="img-container">
+                <img
+                  src="./images/Meditation.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="text-up">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-list-title">Meditation App</h3>
                 <p class="portfolio-list-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/Taxi.jpg"
-                alt="Taxi"
-                width="360"
-                height="300"
-              />
+              <div class="img-container">
+                <img
+                  src="./images/Taxi.jpg"
+                  alt="Taxi"
+                  width="360"
+                  height="300"
+                />
+                <p class="text-up">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-list-title">Taxi Service</h3>
                 <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/Screen.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="img-container">
+                <img
+                  src="./images/Screen.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="text-up">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-list-title">Screen Illustrations</h3>
                 <p class="portfolio-list-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/Online.jpg"
-                alt="Online courses"
-                width="360"
-                height="300"
-              />
+              <div class="img-container">
+                <img
+                  src="./images/Online.jpg"
+                  alt="Online courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="text-up">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-list-title">Online Courses</h3>
                 <p class="portfolio-list-text">Marketing</p>
@@ -471,14 +465,47 @@
     </main>
     <!-- Футер -->
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web <span class="footer-logo-studio">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-container-soc">
+          <p class="soc-media">Social media</p>
+          <ul class="footer-link">
+            <li class="footer-list">
+              <a class="soc-icon-footer" href="">
+                <svg class="soc-icon-svg" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list">
+              <a class="soc-icon-footer" href="">
+                <svg class="soc-icon-svg" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list">
+              <a class="soc-icon-footer" href="">
+                <svg class="soc-icon-svg" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list">
+              <a class="soc-icon-footer" href="">
+                <svg class="soc-icon-svg" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          <a class="footer-logo" href="./index.html"
+            >Web <span class="footer-logo-studio">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
