--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <li class="advantages-list-item">
               <div class="icon-advantages">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Strategy</h3>
@@ -96,7 +96,7 @@
             <li class="advantages-list-item">
               <div class="icon-advantages">
                 <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-clock-1-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Punctuality</h3>
@@ -109,7 +109,7 @@
             <li class="advantages-list-item">
               <div class="icon-advantages">
                 <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Diligence</h3>
@@ -123,7 +123,7 @@
             <li class="advantages-list-item">
               <div class="icon-advantages">
                 <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Technologies</h3>
@@ -155,36 +155,28 @@
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -201,36 +193,28 @@
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -251,36 +235,28 @@
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -301,36 +277,28 @@
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icon-list">
                     <a class="soc-icon" href="">
                       <svg class="soc-icon-svg" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -465,39 +433,8 @@
     </main>
     <!-- Футер -->
     <footer class="footer">
-      <div class="container footer-container">
-        <div class="footer-container-soc">
-          <p class="soc-media">Social media</p>
-          <ul class="footer-link">
-            <li class="footer-list">
-              <a class="soc-icon-footer" href="">
-                <svg class="soc-icon-svg" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-list">
-              <a class="soc-icon-footer" href="">
-                <svg class="soc-icon-svg" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-list">
-              <a class="soc-icon-footer" href="">
-                <svg class="soc-icon-svg" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-list">
-              <a class="soc-icon-footer" href="">
-                <svg class="soc-icon-svg" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+      <div class="footer-container">
+        <div class="container">
           <a class="footer-logo" href="./index.html"
             >Web <span class="footer-logo-studio">Studio</span></a
           >
@@ -505,6 +442,40 @@
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
+        </div>
+
+        <div class="footer-container-soc">
+          <p class="soc-media">Social media</p>
+          <ul class="footer-link">
+            <li class="footer-list">
+              <a class="soc-icon-footer" href="">
+                <svg class="soc-icon-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list">
+              <a class="soc-icon-footer" href="">
+                <svg class="soc-icon-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list">
+              <a class="soc-icon-footer" href="">
+                <svg class="soc-icon-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list">
+              <a class="soc-icon-footer" href="">
+                <svg class="soc-icon-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
