--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
     </main>
     <!-- Футер -->
     <footer class="footer">
-      <div class="footer-container">
-        <div class="container">
+      <div class="footer-container container">
+        <div class="footer-container-logo">
           <a class="footer-logo" href="./index.html"
             >Web <span class="footer-logo-studio">Studio</span></a
           >
